<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_19sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_19sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/h5B5B5B"
            android:textFontWeight="700"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:gravity="center"
            android:text="@string/lbl_recommended_to_you"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerViewRecommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/lbl_my_playlist"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerViewMyPlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>