<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/h575353"
        android:gravity="center">

        <EditText
            android:id="@+id/mEdtSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:background="@drawable/border_edittext_search"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/_2sdp"
            android:hint="@string/search_hint1"
            android:inputType="text"
            android:paddingLeft="@dimen/_18sdp"
            android:textColorHint="@color/h7C7C7C"
            android:textFontWeight="400"
            android:textSize="@dimen/_14ssp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/mRelativeSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mToolbar"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp">

        <TextView
            android:id="@+id/mTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_recent_searches"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/_15ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerViewHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/mTxt2"
            android:layout_below="@+id/mTxt1"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_10sdp" />

        <TextView
            android:id="@+id/mTxt2"
            android:layout_width="@dimen/_187sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/border_text_view_search"
            android:gravity="center"
            android:text="@string/lbl_delete_history"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mToolbar" />

</RelativeLayout>