<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hD6D0D0"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mImgAvatar"
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_34sdp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_14sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mTxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/h000000"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/mTxtSinger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/h000000"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/mLinearAddPlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_playlist_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/lbl_add_playlist"
                android:textColor="@color/h000000"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearAddFavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_favourite_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/lbl_add_favorite"
                android:textColor="@color/h000000"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearDeleteSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/lbl_delete"
                android:textColor="@color/h000000"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>